# PIS-projectis

./: .dockerignore  .gitignore  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
.github/workflows/: docker-compose-pr.yml
doc/: main.typ
doc/mermaid/: Sequence_project_registration.mmd  auth-flow.mmd  er-auth-service.mmd  er-notification-service.mmd  er_project_service.mmd  evaluation.mmd
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: AppShell.jsx  EmptyState.jsx  LoadingState.jsx  PageHeader.jsx  ProtectedRoute.jsx  StatCard.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/lib/: api.js  config.js  mockApi.js
frontend/src/pages/: AdminUsersPage.jsx  DashboardPage.jsx  NotFoundPage.jsx  NotificationsPage.jsx  ProjectsPage.jsx  SubjectsPage.jsx
frontend/src/pages/auth/: AuthLayout.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/utils/: date.js
proto/: auth.proto  common.proto  eval.proto  notification.proto  project.proto  subject.proto
services/auth-service-rust/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  demo_users.toml
services/auth-service-rust/certs/: jwt_es256_private.pem  jwt_es256_public.pem
services/auth-service-rust/src/: config.rs  db.rs  main.rs  models.rs  services.rs
services/notification-service-rust/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
services/notification-service-rust/src/: config.rs  main.rs  service.rs  store.rs
services/project-service-dotnet-template/: Dockerfile  Program.cs  ProjectService.csproj  README.md
services/router-rust/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
services/router-rust/src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  proto.rs  state.rs
services/router-rust/src/handlers/: auth.rs  notification.rs  project.rs  subject.rs
services/subject-service-dart-template/: Dockerfile  README.md  pubspec.yaml
services/subject-service-dart-template/tool/: generate.sh
